# strelka-helloworld

./: strelka-helloworld.cabal
demo/: Main.hs
